--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="colorSecondary">#4E55D7</color>
+    <color name="colorOnSecondary">#EAEAEA</color>
+    <color name="colorBackground">#CDCBC7</color>
+    <color name="colorWhite">#FFFFFF</color>
+    <color name="colorPrimary">#EEEFF4</color>
+    <color name="colorOnPrimary">#737297</color>
+    <color name="colorPrimaryContainer">#EEEFF4</color>
+    <color name="colorOnPrimaryContainer">#545589</color>
+    <color name="textColorGeneral">#000000</color>
+    <color name="textColorHeader1">#161826</color>
+    <color name="textColorGray">#808080</color>
+    <color name="textColorLink">#254FE6</color>
+    <color name="colorEditText">#E8E8E8</color>
+    <color name="colorEditTextHint">#7B7B7B</color>
+    <color name="textMenuColor">#040402</color>
+    <color name="textCategoryMenuColor">#A6A7AB</color>
+    <color name="textCategoryColor">#070604</color>
+    <color name="textCategoryBackgroundColor">#C4C4C4D9</color>
+    <color name="colorCardButton">#D9E5E9EF</color>
+    <color name="colorOnCardButton">#545589</color>
+    <color name="colorSale">#F93A3A</color>
 </resources>
