--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,15 +2,119 @@
     <!-- Base application theme. -->
     <style name="Theme.TestAssignment" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnPrimary">@color/white</item>
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorOnPrimary">@color/colorOnPrimary</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
-        <item name="colorOnSecondary">@color/black</item>
+        <item name="colorSecondary">@color/colorSecondary</item>
+        <item name="colorOnSecondary">@color/colorOnSecondary</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+        <item name="android:statusBarColor">@color/colorBackground</item>
+        <item name="android:navigationBarColor">@color/colorWhite</item>
     </style>
+
+    <style name="TextHeader1" parent="Widget.AppCompat.TextView">
+        <item name="fontFamily">@font/montserrat_medium</item>
+        <item name="android:textSize">26sp</item>
+        <item name="android:fontWeight">600</item>
+        <item name="android:letterSpacing">-0.01</item>
+        <item name="android:textColor">@color/textColorHeader1</item>
+    </style>
+
+    <style name="TextHeader2" parent="Widget.AppCompat.TextView">
+        <item name="fontFamily">@font/montserrat_medium</item>
+        <item name="android:textSize">15sp</item>
+        <item name="android:fontWeight">700</item>
+        <item name="android:letterSpacing">-0.02</item>
+        <item name="android:textColor">@color/textColorGeneral</item>
+    </style>
+
+    <style name="SimpleText" parent="Widget.AppCompat.TextView">
+        <item name="fontFamily">@font/montserrat_medium</item>
+        <item name="android:textSize">10sp</item>
+        <item name="android:fontWeight">500</item>
+        <item name="android:letterSpacing">-0.03</item>
+        <item name="android:textColor">@color/textColorGray</item>
+    </style>
+
+    <style name="LinkText" parent="Widget.AppCompat.TextView">
+        <item name="fontFamily">@font/montserrat_medium</item>
+        <item name="android:textSize">10sp</item>
+        <item name="android:fontWeight">500</item>
+        <item name="android:letterSpacing">-0.03</item>
+        <item name="android:textColor">@color/textColorLink</item>
+    </style>
+
+    <style name="MenuText" parent="Widget.AppCompat.TextView">
+        <item name="fontFamily">@font/montserrat_medium</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:fontWeight">500</item>
+        <item name="android:letterSpacing">-0.02</item>
+        <item name="android:textColor">@color/textMenuColor</item>
+    </style>
+
+    <style name="CategoryMenuText" parent="Widget.AppCompat.TextView">
+        <item name="fontFamily">@font/poppins_medium</item>
+        <item name="android:textSize">8sp</item>
+        <item name="android:fontWeight">500</item>
+        <item name="android:letterSpacing">-0.04</item>
+        <item name="android:textColor">@color/textCategoryMenuColor</item>
+    </style>
+
+    <style name="CategoryText" parent="Widget.AppCompat.TextView">
+        <item name="fontFamily">@font/poppins_medium</item>
+        <item name="android:textSize">6sp</item>
+        <item name="android:fontWeight">500</item>
+        <item name="android:letterSpacing">-0.05</item>
+        <item name="android:textColor">@color/textCategoryColor</item>
+        <item name="android:background">@drawable/background_category_text</item>
+        <item name="android:paddingStart">7dp</item>
+        <item name="android:paddingEnd">6dp</item>
+        <item name="android:paddingTop">2dp</item>
+        <item name="android:paddingBottom">2dp</item>
+    </style>
+
+    <style name="CardText" parent="Widget.AppCompat.TextView">
+        <item name="fontFamily">@font/poppins_medium</item>
+        <item name="android:fontWeight">600</item>
+        <item name="android:letterSpacing">-0.03</item>
+        <item name="android:textColor">@color/colorWhite</item>
+    </style>
+
+    <style name="TransparentButton" parent="Widget.AppCompat.TextView">
+        <item name="fontFamily">@font/montserrat_medium</item>
+        <item name="android:textSize">12sp</item>
+        <item name="android:fontWeight">500</item>
+        <item name="android:letterSpacing">-0.03</item>
+        <item name="android:textColor">@color/textColorGeneral</item>
+        <item name="android:gravity">center_vertical</item>
+    </style>
+
+    <style name="EditText">
+        <item name="android:fontFamily">@font/montserrat_medium</item>
+        <item name="android:fontWeight">500</item>
+        <item name="android:paddingStart">15dp</item>
+        <item name="android:paddingEnd">15dp</item>
+        <item name="android:paddingTop">7dp</item>
+        <item name="android:paddingBottom">7dp</item>
+        <item name="android:textColor">@color/textColorGeneral</item>
+        <item name="android:textColorHint">@color/colorEditTextHint</item>
+        <item name="android:textSize">11sp</item>
+        <item name="android:background">@drawable/background_edit_text</item>
+        <item name="android:imeOptions">actionDone</item>
+        <item name="android:gravity">center_horizontal</item>
+    </style>
+
+    <style name="BlueButton" parent="Widget.AppCompat.Button">
+        <item name="android:fontFamily">@font/montserrat_medium</item>
+        <item name="android:height">46dp</item>
+        <item name="android:fontWeight">700</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:letterSpacing">-0.02</item>
+        <item name="android:textColor">@color/colorOnSecondary</item>
+        <item name="android:background">@drawable/background_button_normal</item>
+        <item name="android:color">@color/colorSecondary</item>
+    </style>
+
 </resources>
