--- a/app/src/main/res/drawable/background_button.xml
+++ b/app/src/main/res/drawable/background_button.xml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
     android:color="?attr/colorControlHighlight">
-    <item android:drawable="@drawable/background_button_normal"/>
+    <item >
+        <shape>
+            <solid android:color="@color/colorSecondary"/>
+            <corners android:radius="15dp"/>
+        </shape>
+    </item>
 </ripple>
