--- a/app/src/main/res/layout/fragment_log_in.xml
+++ b/app/src/main/res/layout/fragment_log_in.xml
@@ -43,7 +43,7 @@
         android:layout_marginStart="44dp"
         android:layout_marginTop="35dp"
         android:layout_marginEnd="42dp"
-        android:hint="@string/last_name"
+        android:hint="@string/password"
         android:inputType="textPassword"
         android:maxLength="128"
         app:layout_constraintTop_toBottomOf="@+id/et_first_name"
