--- a/app/src/main/res/layout/holder_category.xml
+++ b/app/src/main/res/layout/holder_category.xml
@@ -7,7 +7,10 @@
     android:gravity="center_horizontal"
     android:orientation="vertical"
     app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintStart_toStartOf="parent">
+    app:layout_constraintStart_toStartOf="parent"
+    android:layout_marginStart="9dp"
+    android:layout_marginEnd="8dp"
+    >
 
     <ImageView
         android:id="@+id/iv_icon"
