--- a/app/src/main/res/layout/holder_flash_sale.xml
+++ b/app/src/main/res/layout/holder_flash_sale.xml
@@ -7,6 +7,8 @@
     android:layout_height="wrap_content"
     app:cardPreventCornerOverlap="false"
     app:cardCornerRadius="9dp"
+    android:layout_marginStart="5dp"
+    android:layout_marginEnd="5dp"
     >
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="wrap_content"
@@ -67,6 +69,17 @@
             android:layout_marginBottom="17dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
+            />
+        <TextView
+            android:id="@+id/tv_discount"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            style="@style/SaleText"
+            tools:text = "30% off"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
             />
         <androidx.appcompat.widget.AppCompatImageButton
             android:id="@+id/btn_add"
