--- a/app/src/main/res/layout/holder_latest.xml
+++ b/app/src/main/res/layout/holder_latest.xml
@@ -7,6 +7,8 @@
     android:layout_height="wrap_content"
     app:cardPreventCornerOverlap="false"
     app:cardCornerRadius="9dp"
+    android:layout_marginStart="6dp"
+    android:layout_marginEnd="6dp"
     >
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="wrap_content"
