--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/navigation_home">
+    app:startDestination="@+id/navigation_sign_in">
 
     <fragment
         android:id="@+id/navigation_home"
@@ -12,14 +12,52 @@
         tools:layout="@layout/fragment_home" />
 
     <fragment
-        android:id="@+id/navigation_dashboard"
-        android:name="com.valkotova.testassignment.ui.dashboard.DashboardFragment"
-        android:label="@string/title_dashboard"
-        tools:layout="@layout/fragment_dashboard" />
+        android:id="@+id/navigation_favorites"
+        android:name="com.valkotova.testassignment.ui.notImplemented.NotImplementedFragment"
+        android:label="fragment_not_implemented"
+        tools:layout="@layout/fragment_not_implemented" />
 
     <fragment
-        android:id="@+id/navigation_notifications"
-        android:name="com.valkotova.testassignment.ui.notifications.NotificationsFragment"
-        android:label="@string/title_notifications"
-        tools:layout="@layout/fragment_notifications" />
+        android:id="@+id/navigation_cart"
+        android:name="com.valkotova.testassignment.ui.notImplemented.NotImplementedFragment"
+        android:label="fragment_not_implemented"
+        tools:layout="@layout/fragment_not_implemented" />
+
+    <fragment
+        android:id="@+id/navigation_comment"
+        android:name="com.valkotova.testassignment.ui.notImplemented.NotImplementedFragment"
+        android:label="fragment_not_implemented"
+        tools:layout="@layout/fragment_not_implemented" />
+
+    <fragment
+        android:id="@+id/navigation_profile"
+        android:name="com.valkotova.testassignment.ui.profile.ProfileFragment"
+        android:label="ProfileFragment" />
+
+    <fragment
+        android:id="@+id/navigation_sign_in"
+        android:name="com.valkotova.testassignment.ui.signIn.SignInFragment"
+        android:label="SignInFragment" >
+        <action
+            android:id="@+id/action_signInFragment_to_logInFragment"
+            app:destination="@id/navigation_log_in" />
+        <action
+            android:id="@+id/action_signInFragment_to_navigation_home"
+            app:destination="@id/navigation_home" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/navigation_log_in"
+        android:name="com.valkotova.testassignment.ui.login.LogInFragment"
+        android:label="LogInFragment" >
+        <action
+            android:id="@+id/action_logInFragment_to_navigation_home"
+            app:destination="@id/navigation_home" />
+    </fragment>
+    <fragment
+        android:id="@+id/notImplementedFragment"
+        android:name="com.valkotova.testassignment.ui.notImplemented.NotImplementedFragment"
+        android:label="fragment_not_implemented"
+        tools:layout="@layout/fragment_not_implemented" />
+
 </navigation>
