--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,7 +1,8 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.TestAssignment" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.TestAssignment" parent="Theme.MaterialComponents.Light">
         <!-- Primary brand color. -->
+        <item name="android:windowBackground">@color/colorBackground</item>
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorOnPrimary">@color/colorOnPrimary</item>
         <!-- Secondary brand color. -->
@@ -11,6 +12,15 @@
         <!-- Customize your theme here. -->
         <item name="android:statusBarColor">@color/colorBackground</item>
         <item name="android:navigationBarColor">@color/colorWhite</item>
+        <item name="android:windowLightStatusBar">true</item>
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+    <style name="MenuActive">
+        <item name="android:layout_width">40dp</item>
+        <item name="android:layout_height">40dp</item>
+        <item name="android:width">40dp</item>
+        <item name="android:height">40dp</item>
     </style>
 
     <style name="TextHeader1" parent="Widget.AppCompat.TextView">
@@ -27,6 +37,21 @@
         <item name="android:fontWeight">700</item>
         <item name="android:letterSpacing">-0.02</item>
         <item name="android:textColor">@color/textColorGeneral</item>
+    </style>
+
+    <style name="TextHeader3" parent="Widget.AppCompat.TextView">
+        <item name="fontFamily">@font/montserrat_medium</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:fontWeight">700</item>
+        <item name="android:letterSpacing">-0.02</item>
+    </style>
+
+    <style name="TextMainHeaders" parent="Widget.AppCompat.TextView">
+        <item name="fontFamily">@font/poppins_medium</item>
+        <item name="android:textSize">15sp</item>
+        <item name="android:fontWeight">500</item>
+        <item name="android:letterSpacing">-0.02</item>
+        <item name="android:textColor">@color/textColorMainHeaders</item>
     </style>
 
     <style name="SimpleText" parent="Widget.AppCompat.TextView">
@@ -81,6 +106,28 @@
         <item name="android:textColor">@color/colorWhite</item>
     </style>
 
+    <style name="SaleText" parent="Widget.AppCompat.TextView">
+        <item name="fontFamily">@font/poppins_medium</item>
+        <item name="android:textSize">10sp</item>
+        <item name="android:fontWeight">600</item>
+        <item name="android:letterSpacing">-0.03</item>
+        <item name="android:textColor">@color/colorWhite</item>
+        <item name="android:background">@drawable/background_sale_text</item>
+        <item name="android:paddingStart">7dp</item>
+        <item name="android:paddingEnd">6dp</item>
+        <item name="android:paddingTop">2dp</item>
+        <item name="android:paddingBottom">2dp</item>
+    </style>
+
+
+    <style name="TextViewAll" parent="Widget.AppCompat.TextView">
+        <item name="fontFamily">@font/poppins_medium</item>
+        <item name="android:fontWeight">500</item>
+        <item name="android:textSize">9sp</item>
+        <item name="android:letterSpacing">-0.03</item>
+        <item name="android:textColor">@color/textColorGray</item>
+    </style>
+
     <style name="TransparentButton" parent="Widget.AppCompat.TextView">
         <item name="fontFamily">@font/montserrat_medium</item>
         <item name="android:textSize">12sp</item>
@@ -105,6 +152,23 @@
         <item name="android:gravity">center_horizontal</item>
     </style>
 
+    <style name="SearchText">
+        <item name="android:fontFamily">@font/poppins_medium</item>
+        <item name="android:fontWeight">400</item>
+        <item name="android:paddingStart">9dp</item>
+        <item name="android:paddingEnd">8dp</item>
+        <item name="android:paddingTop">6dp</item>
+        <item name="android:paddingBottom">6dp</item>
+        <item name="android:textAlignment">center</item>
+        <item name="android:textColor">@color/textColorGeneral</item>
+        <item name="android:textColorHint">@color/colorSearchHint</item>
+        <item name="android:textSize">9sp</item>
+        <item name="android:drawableEnd">@drawable/ic_search</item>
+        <item name="android:background">@drawable/background_search</item>
+        <item name="android:imeOptions">actionDone</item>
+        <item name="android:gravity">center_horizontal</item>
+    </style>
+
     <style name="BlueButton" parent="Widget.AppCompat.Button">
         <item name="android:fontFamily">@font/montserrat_medium</item>
         <item name="android:height">46dp</item>
@@ -113,7 +177,7 @@
         <item name="android:textSize">14sp</item>
         <item name="android:letterSpacing">-0.02</item>
         <item name="android:textColor">@color/colorOnSecondary</item>
-        <item name="android:background">@drawable/background_button_normal</item>
+        <item name="android:background">@drawable/background_button</item>
         <item name="android:color">@color/colorSecondary</item>
     </style>
 
