--- a/app/src/main/res/layout/fragment_log_in.xml
+++ b/app/src/main/res/layout/fragment_log_in.xml
@@ -56,6 +56,7 @@
         android:id="@+id/toggle_password"
         android:layout_width="24dp"
         android:layout_height="24dp"
+        android:padding="5dp"
         android:layout_margin="12dp"
         android:src="@drawable/ic_eye_off"
         app:layout_constraintBottom_toBottomOf="@+id/et_password"
