--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -7,15 +7,17 @@
     android:background="@color/colorBackground"
     >
 
-    <ImageView
-        android:id="@+id/iv_back"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
+    <ImageButton
+        android:id="@+id/btn_back"
+        android:layout_width="44dp"
+        android:layout_height="44dp"
+        android:padding="10dp"
         android:src="@drawable/ic_arrow_left"
         android:layout_marginStart="15dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="10dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        android:elevation="10dp"
         />
 
     <TextView
@@ -27,7 +29,7 @@
         android:layout_marginTop="30dp"
         android:text="@string/profile"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/iv_back"
+        app:layout_constraintStart_toEndOf="@+id/btn_back"
         app:layout_constraintEnd_toEndOf="parent" />
 
     <LinearLayout
@@ -63,7 +65,7 @@
         android:id="@+id/tv_name"
         style="@style/TextHeader2"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:gravity="center_horizontal"
         android:layout_marginTop="17dp"
         android:text="Satria Adhi Pradana"
@@ -91,14 +93,16 @@
         app:layout_constraintTop_toBottomOf="@id/btn_upload"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/space"
         android:layout_marginStart="32dp"
-        android:layout_marginEnd="45dp"
         >
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:layout_marginEnd="45dp"
+            >
 
             <com.valkotova.testassignment.ui.views.MenuItem
                 android:id="@+id/menu_trade_store"
@@ -172,5 +176,13 @@
                 />
         </LinearLayout>
     </ScrollView>
+    <Space
+        android:id="@+id/space"
+        android:layout_width="match_parent"
+        android:layout_height="63dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
