--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -9,7 +9,18 @@
         android:id="@+id/navigation_home"
         android:name="com.valkotova.testassignment.ui.home.HomeFragment"
         android:label="@string/title_home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_home" >
+        <action
+            android:id="@+id/action_home_to_product"
+            app:destination="@id/navigation_product"
+            />
+        <action
+            android:id="@+id/action_home_to_signin"
+            app:destination="@id/navigation_sign_in"
+            app:popUpTo="@+id/mobile_navigation"
+            app:popUpToInclusive="true"
+            />
+    </fragment>
 
     <fragment
         android:id="@+id/navigation_favorites"
@@ -32,18 +43,32 @@
     <fragment
         android:id="@+id/navigation_profile"
         android:name="com.valkotova.testassignment.ui.profile.ProfileFragment"
-        android:label="ProfileFragment" />
+        android:label="ProfileFragment" >
+        <action
+            android:id="@+id/action_profile_to_home"
+            app:destination="@id/navigation_home" />
+        <action
+            android:id="@+id/action_profile_to_signin"
+            app:destination="@id/navigation_sign_in"
+            app:popUpTo="@+id/mobile_navigation"
+            app:popUpToInclusive="true"
+            />
+    </fragment>
 
     <fragment
         android:id="@+id/navigation_sign_in"
         android:name="com.valkotova.testassignment.ui.signIn.SignInFragment"
         android:label="SignInFragment" >
         <action
-            android:id="@+id/action_signInFragment_to_logInFragment"
-            app:destination="@id/navigation_log_in" />
+            android:id="@+id/action_signin_to_login"
+            app:destination="@id/navigation_log_in"
+            />
         <action
-            android:id="@+id/action_signInFragment_to_navigation_home"
-            app:destination="@id/navigation_home" />
+            android:id="@+id/action_signin_to_home"
+            app:destination="@id/navigation_home"
+            app:popUpTo="@+id/mobile_navigation"
+            app:popUpToInclusive="true"
+            />
     </fragment>
 
     <fragment
@@ -51,13 +76,25 @@
         android:name="com.valkotova.testassignment.ui.login.LogInFragment"
         android:label="LogInFragment" >
         <action
-            android:id="@+id/action_logInFragment_to_navigation_home"
-            app:destination="@id/navigation_home" />
+            android:id="@+id/action_login_to_home"
+            app:destination="@id/navigation_home"
+            app:popUpTo="@+id/mobile_navigation"
+            app:popUpToInclusive="false"
+            app:launchSingleTop="true"
+            />
     </fragment>
     <fragment
         android:id="@+id/notImplementedFragment"
         android:name="com.valkotova.testassignment.ui.notImplemented.NotImplementedFragment"
         android:label="fragment_not_implemented"
         tools:layout="@layout/fragment_not_implemented" />
+    <fragment
+        android:id="@+id/navigation_product"
+        android:name="com.valkotova.testassignment.ui.ProductFragment.ProductFragment"
+        android:label="ProductFragment" >
+        <argument
+            android:name="product"
+            app:argType="com.valkotova.testassignment.model.Product" />
+    </fragment>
 
 </navigation>
